DanielWagnerHall: Adding Mac launcher
r7103